# tuxedo-touchpad-switch

./: .gitignore  CMakeLists.txt  MunkeiVersionFromGit.cmake  ReadMe.md  gsettings-test.c  setup-cinnamon.cpp  setup-cinnamon.h  setup-gnome.cpp  setup-gnome.h  setup-kde.cpp  setup-kde.h  touchpad-control.cpp  touchpad-control.h  tuxedo-touchpad-common.cpp  tuxedo-touchpad-common.h  tuxedo-touchpad-switch-cli.cpp  tuxedo-touchpad-switch-daemon.cpp  tuxedo-touchpad-switch-deamon.cpp  tuxedo-touchpad-switch-kde.cpp  tuxedo-touchpad-switch.cpp  tuxedo-touchpad-switch_1.0.4_amd64.deb  tuxedo-touchpad-toggle.cpp  update_version_and_changelog.sh
debian/: changelog  control  copyright
res/: 99-tuxedo-touchpad-switch.rules  tuxedo-touchpad-switch-daemon.desktop  tuxedo-touchpad-switch-kde.desktop  tuxedo-touchpad-switch-lockfile  tuxedo-touchpad-switch.desktop  tuxedo-touchpad-switch.service
